--- a/mc.html
+++ b/mc.html
@@ -1,100 +1,101 @@
 <!DOCTYPE html>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>ÎÒµÄÊÀ½ç</title>
-</style>
+<title>æˆ‘çš„ä¸–ç•Œ</title>
 <head>
-	<style>
+	<style type = "text/css">
 		#back {height:2000px;background: repeating-linear-gradient(#333333 , #0099CC ,#333333 100%)}
 	</style>
- 	<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+	<link rel="stylesheet" href="css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
+
 	<style type = "text/css">
-	right {position:absolute;right:0px;font-size:15px}
-	pt {font-size:15px;color:#FFFFFF}
-	h1 {font-size:20px;color:#FFFFFF}
-	h2 {font-size:15px;color:#CCCCCC}
-	a  {font-size:25px;color:#FFFFFF}   
-	b  {font-size:25px;color:#FF0000}
-	c  {font-size:25px;color:#00FF00}
-	d  {font-size:25px;color:#0000FF}
-	div#menu {height:200px;width:400px;float:left}
-	div#content {height:200px;width:500px;float:left}
+		right {position:absolute;right:0px;font-size:15px}
+		pt {font-size:15px;color:#FFFFFF}
+		h1 {font-size:20px;color:#FFFFFF}
+		h2 {font-size:15px;color:#CCCCCC}
+		a  {font-size:25px;color:#FFFFFF}
+		b  {font-size:25px;color:#FF0000}
+		c  {font-size:25px;color:#00FF00}
+		d  {font-size:25px;color:#0000FF}
+		div#menu {height:200px;width:400px;float:left}
+		div#content {height:200px;width:500px;float:left}
     </style>
 </head>
 <body>
 <div id="back">
 	<p>
-	<pt>¿ØÖÆÃæ°å</pt>
-		<i class="plus-sign"> 
-		</i>
-		<right>ĞÂ½¨ÏîÄ¿
+	<pt>æ§åˆ¶é¢æ¿</pt>
+		<span class="glyphicon glyphicon-plus-sign" style="color:white";></span>
+		<right>æ–°å»ºé¡¹ç›®
 		</right>
 	</p>
 	<p>
-		<h1>ÎÒµÄÍÅ¶Ó</h1>
+		<h1>æˆ‘çš„å›¢é˜Ÿ</h1>
 	</p>
 	<br/>
 	<br/>
 	<p>
 		<div id = "menu">
-			<h2>ÍÅ¶ÓÊı¾İ</h2>
-			<table height="40">
+			<h2>å›¢é˜Ÿæ•°æ®</h2>
+			<table height="40px">
 			<br/>
 				<tr>
 					<td style="background-color:#FFFFFF;height:40px;width:150px;text-align:center;border-radius: 5px;">
 						<b>0</b>	
 						<br/>
-						<h2>µ½ÆÚÈÎÎñ</h2>				 
+						<h2>åˆ°æœŸä»»åŠ¡</h2>				 
 				    </td>
 					<td style="width:25px"></td>
 					<td style="background-color:#FFFFFF;width:150px;text-align:center;border-radius: 5px;">
 						<c>0</c>
 						<br/>
-						<h2>×òÈÕÍê³É</h2>
+						<h2>æ˜¨æ—¥å®Œæˆ</h2>
 					</td>
 					<td style="width:25px"></td>
 					<td style="background-color:#FFFFFF;width:150px;text-align:center;border-radius: 5px;">
 						<d>0</d>
 						<br />
-						<h2>×òÈÕĞÂÔö</h2>
+						<h2>æ˜¨æ—¥æ–°å¢</h2>
 					</td>
 			  </tr>
 		  </table>
 		</div>
 		<div id = "content">
-			<h2>³ÉÔ±×´Ì¬</h2>
+			<h2>æˆå‘˜çŠ¶æ€</h2>
 				<table height="50";>
 					<tr style="height:40px;">
 					<td style="text-align:center;height:40px;">
 						<a>0</a>
-        				<h2>´ı°ìÖĞ</h2>
+        				<h2>å¾…åŠä¸­</h2>
           			</td>
 			 		<td style="text-align:center;">
 			 			<a>0</a>
-             			<h2>×òÈÕÍê³É</h2>
+             			<h2>æ˜¨æ—¥å®Œæˆ</h2>
              		</td>
              		<td style="text-align:center;">
 			 			<a>0</a>
-             			<h2>½ñÈÕµ½ÆÚ</h2>
+             			<h2>ä»Šæ—¥åˆ°æœŸ</h2>
              		</td>
              		<td style="text-align:center">
 			 			<a>0</a>
-		    	 		<h2>ÑÓÎóÂÊ%</h2>
+		    	 		<h2>å»¶è¯¯ç‡%</h2>
              		</td>
              		<td>
                			<p>
-               				<h2>¸ÕÍê³É:</h2> 
+               				<h2>åˆšå®Œæˆ:</h2> 
                			</p>
                			<p>
-   			   				<h2>½øĞĞÖĞ:</h2>
+   			   				<h2>è¿›è¡Œä¸­:</h2>
                			</p>
                			<p>
-		  	   				<h2>¿ìµ½ÆÚ:</h2>
+		  	   				<h2>å¿«åˆ°æœŸ:</h2>
                			</p>
           			</td>
 		 		</tr>
 			</table>
 				<div style="background-color:#0033FF;width:50px;height:50px;border-radius: 50px;text-align:center">
-		  			<br/>ê»
+		  			<br/>æ˜Š
 				</div>		 
 	</div>
 </p>
